# mcu-ota-plaftorm

./: .env.docker  .env.example  Cargo.toml  Dockerfile  Dockerfile.firmware  Dockerfile.mcu-ota-server  Dockerfile.ota-backend  Dockerfile.ota-database  Dockerfile.ota-file-server  Dockerfile.ota-server  build-image.sh  docker-run.sh  rustfmt.toml  test.sh
baiduyun-api/: Cargo.toml
baiduyun-api/src/: lib.rs
docker/: README.md  docker-compose.yml  init.sql  ota-net.conflist  podman-compose.yml  podman-pod.sh  podman-run.sh  run.sh  stop.sh
docker/init-db/: 001_init.sql
firmware/: Cargo.toml
firmware/migrations/: 20240114130055_init.down.sql  20240114130055_init.up.sql
firmware/migrations/2024-01-19-070545_fw-data/: down.sql  up.sql
firmware/src/: common.rs  config.rs  from_http.rs  from_pg.rs  lib.rs  schema.rs
firmware/src/models/: firmware_data.rs  mod.rs  upgrade_history.rs
firmware/src/routes/: firmware_data.rs
firmware/tests/: basic.rs  test_crud.rs
firmware/tests/entry/: firmware_data.rs  upgrade_history.rs
fw-uploader/: Cargo.toml  test.sh
fw-uploader/src/: args.rs  main.rs  operation.rs
mcu-ota-server/: .gitlab-ci.yml  Cargo.toml  Dockerfile  Jenkinsfile  README.md  build-image.sh  deploy-k3s.sh
mcu-ota-server/docker/: docker-compose.yml
mcu-ota-server/src/: args.rs  lib.rs  main.rs  process_pg.rs  request_process.rs
mcu-ota-server/src/firmware/: common.rs  from_disk.rs  from_http.rs
mcu-ota-server/src/package/: common.rs  mod.rs  rx_package.rs  tx_package.rs
mcu-ota-server/tests/: test_http.rs  test_local.rs
minio-api/: Cargo.toml
minio-api/src/: lib.rs  main.rs
ota-backend/: .env  Cargo.toml  Dockerfile
ota-backend/src/: args.rs  lib.rs  main.rs
ota-backend/src/middle/: app_state.rs  config.rs  handler.rs  jwt_auth.rs  mod.rs
ota-database/: .env  Cargo.toml
ota-database/migrations/2024-01-19-070545_fw-data/: down.sql  up.sql
ota-database/src/: db.rs  from_pg.rs  lib.rs  schema.rs
ota-database/src/controls/: config_history.rs  firmware_data.rs  mod.rs  upgrade_history.rs  user.rs
ota-database/src/middleware/: jwt_auth.rs  mod.rs
ota-database/src/models/: basic.rs  config_history.rs  firmware_data.rs  mod.rs  upgrade_history.rs  user.rs
ota-database/src/routes/: mod.rs  total.rs
ota-database/tests/: basic.rs  mod.rs
ota-database/tests/entry/: config_history.rs  firmware_data.rs  mod.rs  upgrade_history.rs  user.rs
ota-file-server/: .env  Cargo.toml  Dockerfile  Jenkinsfile  README.md  build-image.sh
ota-file-server/src/: args.rs  lib.rs  main.rs
ota-file-server/src/firmware/: common.rs  from_disk.rs  mod.rs
ota-frontend/: .env.example  Dockerfile  IMPLEMENTATION.md  README.md  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
ota-frontend/src/: App.vue  main.ts
ota-frontend/src/api/: auth.ts  firmware.ts  history.ts  index.ts  types.ts
ota-frontend/src/components/: Layout.vue
ota-frontend/src/router/: index.ts
ota-frontend/src/stores/: user.ts
ota-frontend/src/views/: Dashboard.vue  Firmware.vue  History.vue  Login.vue
ota-server/: Cargo.toml
ota-server/examples/: press_test.rs
ota-server/k8s/: deploy-k3s.yaml
ota-server/src/: args.rs  lib.rs  main.rs  process_pg.rs
ota-server/src/package/: common.rs  tx_package.rs
user-client/: Cargo.toml  test.sh
user-client/src/: args.rs  lib.rs  main.rs
