[workspace]
members = ["ota-server", "ota-backend", "ota-database", "fw-uploader"]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.13", features = ["json", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web framework
actix-web = "4"
actix-rt = "2"
actix-files = "0.6"
actix-cors = "0.7"
actix-http = "3"

# Database
sqlx = { version = "0.7", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1", features = ["serde", "v4"] }

# Authentication
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"
rand_core = "0.9"

# Logging
log = "0.4"
pretty_env_logger = "0.5"
env_logger = "0.11"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rand = "0.8"
crc = "3"
base64 = "0.22"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
dotenv = "0.15"

# Error handling
thiserror = "1.0"
