[package]
name = "firmware"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
crc = "3.0.1"
log = "0.4.20"
tokio = { version = "1.35.1", features = ["full"] }
pretty_env_logger = "0.5.0"
clap = { version = "4.4.12", features = ["derive"] }
regex = "1.10.2"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["serde_derive"] }
sqlx = { version = "0.7.3", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
serde_json = "1.0.111"
actix-web = "4.4.1"
actix-rt = "2.9.0"
base64 = "0.21.7"
engine = "0.0.0"
