[package]
name = "fw-uploader"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.1", features = [
    "native-tls-vendored",
    "json",
    "multipart",
] }
clap = { version = "4.5.54", features = ["derive"] }
ota-database = { path = "../ota-database" }
base64 = "0.22.1"
log = "0.4.20"
pretty_env_logger = "0.5.0"
chrono = "0.4.31"
