[package]
name = "fw-uploader"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio.workspace = true
reqwest = { workspace = true, features = ["native-tls-vendored"] }
clap.workspace = true
ota-database = { path = "../ota-database" }
base64.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
chrono.workspace = true
