[package]
name = "minio-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minio = "0.1.0"
minio-rsc = { version = "0.2.3", features = ["fs-tokio"] }
tokio = { version = "1.39.2", features = ["full"] }
