[package]
name = "ota-backend"
version = "0.6.0"
edition = "2021"

[dependencies]
actix-files.workspace = true
actix-web.workspace = true
serde.workspace = true
tokio.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
clap.workspace = true
regex.workspace = true
serde_json.workspace = true
env_logger.workspace = true
chrono.workspace = true
actix-rt.workspace = true
futures-util.workspace = true
jsonwebtoken.workspace = true
futures.workspace = true
actix-cors.workspace = true
argon2.workspace = true
dotenv.workspace = true
rand_core.workspace = true
sqlx.workspace = true
uuid.workspace = true

ota-database = { path = "../ota-database" }
