[package]
name = "ota-database"
version = "0.5.2"
edition = "2021"

[dependencies]
reqwest = { workspace = true, features = ["native-tls-vendored"] }
crc.workspace = true
log.workspace = true
tokio.workspace = true
pretty_env_logger.workspace = true
clap.workspace = true
regex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
actix-web.workspace = true
actix-rt.workspace = true
base64.workspace = true
chrono.workspace = true
dotenv.workspace = true
actix-files.workspace = true
env_logger.workspace = true
futures-util.workspace = true
jsonwebtoken.workspace = true
futures.workspace = true
actix-cors.workspace = true
argon2.workspace = true
rand_core.workspace = true
sqlx.workspace = true
uuid.workspace = true
async-trait.workspace = true
thiserror.workspace = true

[dev-dependencies]
actix-web.workspace = true
actix-http.workspace = true
env_logger.workspace = true
pretty_env_logger.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenv.workspace = true
