[package]
name = "ota-file-server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.4.1"
serde = { version = "1.0.195", features = ["serde_derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
clap = { version = "4.4.12", features = ["derive"] }
regex = "1.10.2"
