[package]
name = "ota-server"
version = "0.4.2"
edition = "2021"

[dependencies]
tokio.workspace = true
reqwest = { workspace = true, features = ["native-tls-vendored"] }
log.workspace = true
pretty_env_logger.workspace = true
clap.workspace = true
regex.workspace = true
rand.workspace = true
serde.workspace = true
chrono.workspace = true
crc.workspace = true

ota-database = { path = "../ota-database" }
