[package]
name = "user-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
clap = { version = "4.4.12", features = ["derive"] }
firmware = { path = "../firmware" }
base64 = "0.21.7"
