[package]
name = "user-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
clap = { version = "4.4.18", features = ["derive"] }
firmware = { path = "../firmware" }
base64 = "0.21.7"
log = "0.4.20"
pretty_env_logger = "0.5.0"
logger = "0.4.0"
chrono = "0.4.31"
